avoid flickering on page refresh

--- a/src/main/css/bundles/sick-note-extend.css
+++ b/src/main/css/bundles/sick-note-extend.css
@@ -44,10 +44,14 @@
   cursor: pointer;
 }
 
+.sicknote-extend-button {
+  @apply tw-border-2;
+}
+
 .sicknote-extend-button[aria-pressed="true"],
 .sicknote-extend-button--selected {
-  @apply tw-border-2;
   @apply tw-border-blue-400;
+  @apply hover:dark:tw-border-blue-400; /* override button hover selector for dark theme */
 }
 
 @screen xs {
